--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "_description": "전세낀 시스템 운영 설정 — 수집 전략·딜레이·링크·문구 등 확장 프로그램 업데이트 없이 즉시 변경 가능한 값",
+    "_description": "전세낀 시스템 운영 설정 — 수집 전략·딜레이·링크·문구·API 엔드포인트 등 확장 프로그램 업데이트 없이 즉시 변경 가능한 값",
 
     "_security_note": "COUPANG_LINK(쿠팡 파트너스 수익 링크)는 외부 주입 공격 방지를 위해 이 파일에 포함하지 않습니다. 반드시 chrome-extension/config.js에서만 수정하세요.",
 
